@@ -8,11 +8,8 @@ import tripleo.elijah.comp.internal.CompilationImpl;
 import tripleo.elijah.comp.internal.DefaultCompilerController;
 import tripleo.elijah.factory.NonOpinionatedBuilder;
 import tripleo.elijah.nextgen.outputstatement.*;
-import tripleo.elijah.nextgen.outputtree.EOT_OutputFile;
-import tripleo.elijah.nextgen.outputtree.EOT_OutputTree;
-import tripleo.elijah.nextgen.outputtree.EOT_OutputType;
+import tripleo.elijah.nextgen.outputtree.*;
 import tripleo.elijah.util.Helpers;
-import tripleo.elijah_elevated.comp.input.CompilerInput_;
 import tripleo.small.ES_Symbol;
 
 import java.util.List;
@@ -27,28 +24,28 @@ public class SX_NodeTest2 {
 	private static EG_SequenceStatement getTestStatement() {
 		// (syn include local "main.h" :rule c-interface-default)
 		final EG_SyntheticStatement emh = new EG_SyntheticStatement(new EG_Naming("include", "local"), "main.h",
-				new EX_Rule("c-interface-default"));
+		                                                            new EX_Rule("c-interface-default"));
 		// (syn include system (?) :Prelude :rule c-interface-prelude-default)
 		final EG_SyntheticStatement eph = new EG_SyntheticStatement(new EG_Naming("include", "system"),
-				new ES_Symbol("Prelude"), new EX_Rule("c-interface-prelude-default"));
+		                                                            new ES_Symbol("Prelude"), new EX_Rule("c-interface-prelude-default"));
 		// (syn linebreak :rule c-break-after-includes)
 		final EG_SyntheticStatement lb1 = new EG_SyntheticStatement(new EG_Naming("linebreak"),
-				new ES_Symbol("linebreak"), new EX_Rule("c-interface-prelude-default"));
+		                                                            new ES_Symbol("linebreak"), new EX_Rule("c-interface-prelude-default"));
 		lb1.setText("\n");
 		// 8 -> (comp seq c-fn-hdr '("void" :tag fn Main::main/<rt-type>)
 		// '("z100main" :tag <class Main> :rule c-fn-code-main))
 		final EG_SingleStatement a = new EG_SingleStatement("void").tag("fn Main::main/<rt-type>", 0);
 		final EG_SingleStatement b = new EG_SingleStatement("z100main").tag("<class Main>", 0).rule("c-fn-code-main",
-				0);
+		                                                                                            0);
 
 		final EG_SingleStatement mc91e1 = new EG_SingleStatement("Z100*").tag("<class Main>", 0)
 				.rule("c-class-code-main", 0);
 		final EG_SingleStatement mc91e2 = new EG_SingleStatement("C").tag("<class Main>", 0).rule("c-arg-c-for-current",
-				0);
+		                                                                                          0);
 		final EG_SequenceStatement mc91e = new EG_SequenceStatement(new EG_Naming("xxx_fn-arg-1"),
-				List_of(mc91e1, mc91e2));
+		                                                            List_of(mc91e1, mc91e2));
 		final EG_SequenceStatement mc91ee = new EG_SequenceStatement(new EG_Naming("xxx_arg-list"), "(", ")",
-				List_of(mc91e));
+		                                                             List_of(mc91e));
 		final EG_SequenceStatement mc8 = new EG_SequenceStatement(new EG_Naming("c-fn-hdr"), List_of(a, b, mc91ee));
 
 		// 9+ -> (comp seq '({9.1} {9.2}))
@@ -70,15 +67,15 @@ public class SX_NodeTest2 {
 		final EG_SingleStatement mc91f = new EG_SingleStatement(";").rule("c-close-statement", 0);
 
 		final EG_SequenceStatement mc91 = new EG_SequenceStatement(new EG_Naming("xxx_int-decl"),
-				List_of(mc91a, mc91b, mc91c, mc91d, mc91f));
+		                                                           List_of(mc91a, mc91b, mc91c, mc91d, mc91f));
 		// 9.2.1 -> (comp seq while-loop-range-monotonic ("while") (LPAREN) (ENC??)
 		// ("vvi" :tag [with i])
 		// ("<=" :rule el-c-integer-iterator-pre-begin-test)
 		// ("100" :tag [to 100] :rule el-c-integer-iterator-to)
 		// (RPAREN))
-		final EG_SingleStatement cc = new EG_SingleStatement("vvi").tag("with i", 0);
-		final EG_SingleStatement cd = new EG_SingleStatement("<=").rule("el-c-integer-iterator-pre-begin-test", 0);
-		final EG_SingleStatement ce = new EG_SingleStatement("100").tag("to 100", 0).rule("c-integer-iterator-to", 0);
+		final EG_SingleStatement   cc    = new EG_SingleStatement("vvi").tag("with i", 0);
+		final EG_SingleStatement   cd    = new EG_SingleStatement("<=").rule("el-c-integer-iterator-pre-begin-test", 0);
+		final EG_SingleStatement   ce    = new EG_SingleStatement("100").tag("to 100", 0).rule("c-integer-iterator-to", 0);
 		final EG_SequenceStatement mc921 = new EG_SequenceStatement("while(", ")", List_of(cc, cd, ce));
 		// 9.2.2.1 -> (comp sing "vvi++" (postinc "vvi")?? :rule
 		// el-integer-iterate-monotonic
@@ -89,13 +86,13 @@ public class SX_NodeTest2 {
 		// Prelude/SystemInteger )]) // list vs list
 		// ("vvi" :tag [with i]))
 		final EG_SingleStatement mc9222a = new EG_SingleStatement("println_int"); // TODO ref //.tag("with i",
-																					// 0).rule("el-integer-iterate-monotonic",
-																					// 0); // seq no-space
+		// 0).rule("el-integer-iterate-monotonic",
+		// 0); // seq no-space
 		final EG_SingleStatement mc9222b = new EG_SingleStatement("(");
 		final EG_SingleStatement mc9222c = new EG_SingleStatement("vvi").tag("with i", 0); // seq no-space
 		final EG_SingleStatement mc9222d = new EG_SingleStatement(");");
 		final EG_SequenceStatement mc9222 = new EG_SequenceStatement(new EG_Naming("xxx_fn-call-1"),
-				List_of(mc9222a, mc9222b, mc9222c, mc9222d));
+		                                                             List_of(mc9222a, mc9222b, mc9222c, mc9222d));
 		// 9.2.2 -> (comp seq {9.2.2.1} {9.2.2.2})
 		final EG_SequenceStatement mc922 = new EG_SequenceStatement("{", "}", List_of(mc9221, mc9222));
 		// 9.2 -> (comp enc {9.2.1} BRACES {9.2.2})
@@ -114,9 +111,9 @@ public class SX_NodeTest2 {
 	@Disabled
 	@Test
 	public void testFullText() {
-		final StdErrSink errSink = new StdErrSink();
-		final IO io = new IO_();
-		final CompilationImpl comp = new CompilationImpl(errSink, io);
+		final StdErrSink      errSink = new StdErrSink();
+		final IO              io      = new IO_();
+		final CompilationImpl comp    = new CompilationImpl(errSink, io);
 
 		final String f = "test/basic2/while100/";
 
@@ -129,21 +126,21 @@ public class SX_NodeTest2 {
 
 		/*
 		 * final SM_ClassDeclaration node = new SM_ClassDeclaration() {
-		 * 
+		 *
 		 * @Override public @Nullable SM_ClassBody classBody() { return null; }
-		 * 
+		 *
 		 * @Override public @NotNull SM_ClassInheritance inheritance() { return new
 		 * SM_ClassInheritance() {
-		 * 
+		 *
 		 * @Override public @NotNull List<SM_Name> names() { return List_of(new
 		 * SM_Name() {
-		 * 
+		 *
 		 * @Override public @NotNull String getText() { return "Arguments"; } }); } }; }
-		 * 
+		 *
 		 * @Override public @NotNull SM_Name name() { return new SM_Name() {
-		 * 
+		 *
 		 * @Override public @NotNull String getText() { return "Main"; } }; }
-		 * 
+		 *
 		 * @Override public @NotNull SM_ClassSubtype subType() { return
 		 * SM_ClassSubtype.NORMAL; } };
 		 */
@@ -159,18 +156,20 @@ public class SX_NodeTest2 {
 		tripleo.elijah.util.SimplePrintLoggerToRemoveSoon.println_out_4("");
 
 		final List<EOT_OutputFile> l = rt.getList();
-		assert l != null;
 
 		final int yyy = 2;
-		final List<EOT_OutputFile> wmainl = l.stream().filter(eof -> eof.getFilename().equals("/while100/Main.c"))
-				.collect(Collectors.toList());
+		final List<EOT_OutputFile> wmainl = l.stream()
+				.filter(eof -> eof.getFilename().equals("/while100/Main.c"))
+				.toList();
 
 		// assert wmainl.size() > 0;
 
-		wmainl.stream().filter(wmain -> wmain.getType() == EOT_OutputType.SOURCES).forEach(wmain -> {
-			tripleo.elijah.util.SimplePrintLoggerToRemoveSoon.println_out_4("****************************");
-			final EG_Statement seqs = wmain.getStatementSequence();
-			tripleo.elijah.util.SimplePrintLoggerToRemoveSoon.println_out_4(seqs.getText());
-		});
+		wmainl.stream()
+				.filter(wmain -> wmain.getType() == EOT_OutputType.SOURCES)
+				.forEach(wmain -> {
+					tripleo.elijah.util.SimplePrintLoggerToRemoveSoon.println_out_4("****************************");
+					final EG_Statement seqs = wmain.getStatementSequence();
+					tripleo.elijah.util.SimplePrintLoggerToRemoveSoon.println_out_4(seqs.getText());
+				});
 	}
 }
